# osv-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  client-configuration.md  configuration.md  malicious-data.md  milestones.md  mongolino-integration.md  observability.md  osv-data.md  performance.md  policy.md  product-spec.md  registry-behavior.md
docs/internal/: audit-2026-07-11.md  goal-01-core-naive-redirect.md  goal-02-npm-adapter-redirect.md  goal-03-pypi-adapter-redirect.md  goal-04-e2e-hardening.md  goal-05-concurrency-policy-hardening.md  goal-06-truthful-check-command.md  goal-07-artifact-proxy-mode.md  goal-08-local-malicious-sqlite.md  goal-09-cargo-crates-io-support.md  goal-10-go-modules-support.md  goal-11-nuget-dotnet-support.md  goal-12-osv-vulnerability-severity-policy.md  goal-13-rubygems-bundler-support.md  goal-14-maven-java-support.md  goal-15-high-severity-audit-remediation.md  goal-16-medium-audit-remediation.md
examples/basic/: osv-proxy.yaml
examples/mongolino/: compose.yaml  osv-proxy.yaml
examples/phase1/: osv-proxy.yaml
src/: artifact.rs  artifacts.rs  cargo.rs  cli.rs  config.rs  go.rs  http_body.rs  lib.rs  main.rs  malicious.rs  maven.rs  npm.rs  nuget.rs  policy.rs  pypi.rs  readiness.rs  response.rs  rubygems.rs  runtime.rs  server.rs
tests/: package_manager_e2e.rs  workflow_reproducibility.rs
tests/fixtures/osv/: modified_id-samples.csv  npm-mal-exact-and-range.json  npm-mal-range.json  pypi-mal-exact.json  pypi-mal-range.json
