[package]
name = "osv-proxy"
version = "0.7.3"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
md5 = "0.8"
node-semver = "2.2.0"
pep440_rs = "0.7.3"
polycvss = "0.4.0"
quick-xml = { version = "0.41", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sha1 = "0.10"
semver = "1.0"
thiserror = "2.0"
tempfile = "3.27"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5", features = ["util"] }
zip = { version = "4.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
